# HTD

./: .gitignore  EVALUATION_REPORT.md  MOTION_ENCODER_DESIGN.md  README.md  interwild_data_pipeline.md  pyproject.toml  run_eval.py  seq_config.py  seq_train.py
dataset/: create_data.py  data_aug.py  dataset_utils.py  process_dexycb.py  seqhand.py  seqhand_motion.py  video_interhand.py  video_interhand_gen.py
model/: DSF.py  FusionFormer.py  loss.py  motion_encoder.py  rope.py  temporal_transformer.py  vit_encoder.py
utils/: defaults.yaml  fix_seed.py  video_utils.py  visualize.py
