[project]
name = "htd"
version = "0.1.0"
description = "Hand Temporal Denoising"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24,<2.0",
    "einops>=0.6",
    "opencv-python>=4.8",
    "yacs>=0.1.8",
    "tensorboard>=2.13",
    "tqdm>=4.64",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "trimesh>=4.0",
    "pyrender>=0.1",
    "imgaug>=0.4.0",
    "roma>=1.5.6",
    "termcolor>=3.3.0",
]
